--- a/index.html
+++ b/index.html
@@ -3419,10 +3419,229 @@
   <!-- app end -->
   <div id="swupMenu"></div>
   <!-- modal js -->
+  <script src="js/plugins/jquery.min.js"></script>
   <script src="js/plugins/animatedModal.js"></script>
+  
+  <script>
+
+      //demo 01
+      $("#demo01").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 02
+      $("#demo02").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 03
+      $("#demo03").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 04
+      $("#demo04").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 05
+      $("#demo05").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 06
+      $("#demo06").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 07
+      $("#demo07").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 08
+      $("#demo08").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 09
+      $("#demo09").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 10
+      $("#demo10").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 11
+      $("#demo11").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 12
+      $("#demo12").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 13
+      $("#demo13").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 14
+      $("#demo14").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 15
+      $("#demo15").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 16
+      $("#demo16").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 17
+      $("#demo17").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 18
+      $("#demo18").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 19
+      $("#demo19").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 20
+      $("#demo20").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 21
+      $("#demo21").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 22
+      $("#demo22").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 23
+      $("#demo23").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 24
+      $("#demo24").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 25
+      $("#demo25").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 26
+      $("#demo26").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+      //demo 27
+      $("#demo27").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
+
+          //demo 28
+          $("#demo28").animatedModal({
+        animatedIn:'bounceInDown',
+        animatedOut:'bounceOutDown',
+        color:'#103732'
+      });
 
 
+  </script>
 
+  <!-- jquery js -->
+  <!-- anime js -->
+  <script src="js/plugins/anime.min.js"></script>
+  <!-- swiper js -->
+  <script src="js/plugins/swiper.min.js"></script>
+  <!-- progressbar js -->
+  <script src="js/plugins/progressbar.min.js"></script>
+  <!-- smooth scrollbar js -->
+  <script src="js/plugins/smooth-scrollbar.min.js"></script>
+  <!-- overscroll js -->
+  <script src="js/plugins/overscroll.min.js"></script>
+  <!-- typing js -->
+  <script src="js/plugins/typing.min.js"></script>
+  <!-- isotope js -->
+  <script src="js/plugins/isotope.min.js"></script>
+  <!-- fancybox js -->
+  <script src="js/plugins/fancybox.min.js"></script>
+  <!-- swup js -->
+  <script src="js/plugins/swup.min.js"></script>
 
   <!-- main js -->
   <script src="js/main.js"></script>
