--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
         <!-- title -->
         <h5 class="mb-15">A-Track</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo25" href="works/01.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo25" href="works/25.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -981,7 +981,7 @@
         <!-- title -->
         <h5 class="mb-15">Amray Group</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo26" href="#modal-26" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo26" href="works/26.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1003,7 +1003,7 @@
         <!-- title -->
         <h5 class="mb-15">Order Track</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo27" href="#modal-27" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo27" href="works/27.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1025,7 +1025,7 @@
             <!-- title -->
             <h5 class="mb-15">A-Track Mobile App</h5>
             <!-- button -->
-            <div class="art-buttons-frame"><a id="demo28" href="#modal-28" class="art-link art-color-link art-w-chevron">Know More</a></div>
+            <div class="art-buttons-frame"><a id="demo28" href="works/28.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
           </div>
           <!-- description end -->
     
@@ -1047,7 +1047,7 @@
         <!-- title -->
         <h5 class="mb-15">Pochinki Edtech</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo01" href="#modal-01" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo01" href="works/01.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1069,7 +1069,7 @@
         <!-- title -->
         <h5 class="mb-15">Timberline Helicharters</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo02" href="#modal-02" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo02" href="works/02.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1091,7 +1091,7 @@
         <!-- title -->
         <h5 class="mb-15">Cloud TV</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo03" href="#modal-03" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo03" href="works/03.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1113,7 +1113,7 @@
         <!-- title -->
         <h5 class="mb-15">MyTineraries</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo04" href="#modal-04" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo04" href="works/04.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1135,7 +1135,7 @@
         <!-- title -->
         <h5 class="mb-15">Healthmate</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo05" href="#modal-05" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo05" href="works/05.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1157,7 +1157,7 @@
         <!-- title -->
         <h5 class="mb-15">ClixzYou</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo06" href="#modal-06" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo06" href="works/06.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1179,7 +1179,7 @@
         <!-- title -->
         <h5 class="mb-15">Cloudwalker</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo07" href="#modal-07" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo07" href="works/07.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1201,7 +1201,7 @@
         <!-- title -->
         <h5 class="mb-15">Petonic</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo08" href="#modal-08" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo08" href="works/08.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1223,7 +1223,7 @@
         <!-- title -->
         <h5 class="mb-15">EasyGrade</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo09" href="#modal-09" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo09" href="works/09.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1245,7 +1245,7 @@
         <!-- title -->
         <h5 class="mb-15">ClixzYou</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo11" href="#modal-11" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo11" href="works/11.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1267,7 +1267,7 @@
         <!-- title -->
         <h5 class="mb-15">Transocean Education</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo10" href="#modal-10" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo10" href="works/10.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1289,7 +1289,7 @@
         <!-- title -->
         <h5 class="mb-15">Ideaxlab</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo12" href="#modal-12" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo12" href="works/12.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1311,7 +1311,7 @@
         <!-- title -->
         <h5 class="mb-15">Transocean Education</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo13" href="#modal-13" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo13" href="works/13.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1333,7 +1333,7 @@
         <!-- title -->
         <h5 class="mb-15">Workolab Coworking</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo14" href="#modal-14" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo14" href="works/14html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1355,7 +1355,7 @@
         <!-- title -->
         <h5 class="mb-15">Avoir</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo15" href="#modal-15" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo15" href="works/15.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1377,7 +1377,7 @@
         <!-- title -->
         <h5 class="mb-15">Petonic</h5>
         <!-- button -->
-        <div class="art-buttons-frame"><a id="demo16" href="#modal-16" class="art-link art-color-link art-w-chevron">Know More</a></div>
+        <div class="art-buttons-frame"><a id="demo16" href="works/16.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
       </div>
       <!-- description end -->
 
@@ -1399,7 +1399,7 @@
       <!-- title -->
       <h5 class="mb-15">Pedestal</h5>
       <!-- button -->
-      <div class="art-buttons-frame"><a id="demo17" href="#modal-17" class="art-link art-color-link art-w-chevron">Know More</a></div>
+      <div class="art-buttons-frame"><a id="demo17" href="works/17.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
     </div>
     <!-- description end -->
 
@@ -1421,7 +1421,7 @@
       <!-- title -->
       <h5 class="mb-15">MV Entertainment</h5>
       <!-- button -->
-      <div class="art-buttons-frame"><a id="demo18" href="#modal-18" class="art-link art-color-link art-w-chevron">Know More</a></div>
+      <div class="art-buttons-frame"><a id="demo18" href="works/18.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
     </div>
     <!-- description end -->
 
@@ -1443,7 +1443,7 @@
       <!-- title -->
       <h5 class="mb-15">Workolab Coworking</h5>
       <!-- button -->
-      <div class="art-buttons-frame"><a id="demo19" href="#modal-19" class="art-link art-color-link art-w-chevron">Know More</a></div>
+      <div class="art-buttons-frame"><a id="demo19" href="works/19.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
     </div>
     <!-- description end -->
 
@@ -1465,7 +1465,7 @@
       <!-- title -->
       <h5 class="mb-15">EasyGrade</h5>
       <!-- button -->
-      <div class="art-buttons-frame"><a id="demo20" href="#modal-20" class="art-link art-color-link art-w-chevron">Know More</a></div>
+      <div class="art-buttons-frame"><a id="demo20" href="works/20.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
     </div>
     <!-- description end -->
 
@@ -1487,7 +1487,7 @@
       <!-- title -->
       <h5 class="mb-15">Ideaxlab</h5>
       <!-- button -->
-      <div class="art-buttons-frame"><a id="demo21" href="#modal-21" class="art-link art-color-link art-w-chevron">Know More</a></div>
+      <div class="art-buttons-frame"><a id="demo21" href="works/21.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
     </div>
     <!-- description end -->
 
@@ -1509,7 +1509,7 @@
       <!-- title -->
       <h5 class="mb-15">Incuspaze</h5>
       <!-- button -->
-      <div class="art-buttons-frame"><a id="demo22" href="#modal-22" class="art-link art-color-link art-w-chevron">Know More</a></div>
+      <div class="art-buttons-frame"><a id="demo22" href="works/22.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
     </div>
     <!-- description end -->
 
@@ -1531,7 +1531,7 @@
       <!-- title -->
       <h5 class="mb-15">AMIMUN</h5>
       <!-- button -->
-      <div class="art-buttons-frame"><a id="demo23" href="#modal-23" class="art-link art-color-link art-w-chevron">Know More</a></div>
+      <div class="art-buttons-frame"><a id="demo23" href="works/23.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
     </div>
     <!-- description end -->
 
@@ -1553,7 +1553,7 @@
       <!-- title -->
       <h5 class="mb-15">Amimart</h5>
       <!-- button -->
-      <div class="art-buttons-frame"><a id="demo24" href="#modal-24" class="art-link art-color-link art-w-chevron">Know More</a></div>
+      <div class="art-buttons-frame"><a id="demo24" href="works/24.html" class="art-link art-color-link art-w-chevron">Know More</a></div>
     </div>
     <!-- description end -->
 
