--- a/works/01.html
+++ b/works/01.html
@@ -605,7 +605,7 @@
                         <br>
                         <div class="row">
                           <div class="col-md-12 modal-col-bg">
-                          <img class="img-fluid mb-10" src="../img/works/original-size/01.PNG"> 
+                          <img class="img-fluid mb-10" src="../img/works/original-size/01.png"> 
                           </div>
                         </div>
                       
